definiendo tamaño a los textarea de los mapas mentales

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
@@ -84,7 +84,8 @@
                                              id="uno"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="uno" styleClass="mensaje-alerta-10"/>
@@ -94,7 +95,8 @@
                                              id="dos"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="dos" styleClass="mensaje-alerta-10"/>
@@ -104,7 +106,8 @@
                                              id="tres"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="tres" styleClass="mensaje-alerta-10"/>
@@ -114,7 +117,8 @@
                                              id="cuatro"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="cuatro" styleClass="mensaje-alerta-10"/>
@@ -129,7 +133,8 @@
                                              id="cinco"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="cinco" styleClass="mensaje-alerta-10"/>
@@ -139,7 +144,8 @@
                                              id="seis"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="seis" styleClass="mensaje-alerta-10"/>
@@ -149,7 +155,8 @@
                                              id="siete"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="siete" styleClass="mensaje-alerta-10"/>
@@ -159,7 +166,8 @@
                                              id="ocho"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"
+                                             pt:maxlength="103">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="ocho" styleClass="mensaje-alerta-10"/>
