--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -89,7 +89,8 @@
                                                      styleClass="uk-textarea"
                                                      id="verde-1"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -102,7 +103,8 @@
                                                      styleClass="uk-textarea"
                                                      id="verde-2"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
 
@@ -116,7 +118,8 @@
                                                      styleClass="uk-textarea"
                                                      id="verde-3"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[11].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[11].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[11].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
 
@@ -130,7 +133,8 @@
                                                      styleClass="uk-textarea"
                                                      id="verde-4"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[15].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[15].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[15].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -143,7 +147,8 @@
                                                      styleClass="uk-textarea"
                                                      id="verde-5"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[19].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[19].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[19].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -162,7 +167,8 @@
                                                      styleClass="uk-textarea"
                                                      id="amarillo-1"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -175,7 +181,8 @@
                                                      styleClass="uk-textarea"
                                                      id="amarillo-2"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -188,7 +195,8 @@
                                                      styleClass="uk-textarea"
                                                      id="amarillo-3"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[10].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -201,7 +209,8 @@
                                                      styleClass="uk-textarea"
                                                      id="amarillo-4"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[14].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[14].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[14].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -214,7 +223,8 @@
                                                      styleClass="uk-textarea"
                                                      id="amarillo-5"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[18].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[18].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[18].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -231,7 +241,8 @@
                                                      styleClass="uk-textarea"
                                                      id="morado-1"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -244,7 +255,8 @@
                                                      styleClass="uk-textarea"
                                                      id="morado-2"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -257,7 +269,8 @@
                                                      styleClass="uk-textarea"
                                                      id="morado-3"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -270,7 +283,8 @@
                                                      styleClass="uk-textarea"
                                                      id="morado-4"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[13].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[13].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[13].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -283,7 +297,8 @@
                                                      styleClass="uk-textarea"
                                                      id="morado-5"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[17].respuesta}"
-                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[17].pregunta}">
+                                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[17].pregunta}"
+                                                     pt:maxlength="50">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -301,7 +316,8 @@
                                                  styleClass="uk-textarea"
                                                  id="azul-1"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                                 pt:maxlength="50">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -314,7 +330,8 @@
                                                  styleClass="uk-textarea"
                                                  id="azul-2"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
+                                                 pt:maxlength="50">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -327,7 +344,8 @@
                                                  styleClass="uk-textarea"
                                                  id="azul-3"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}"
+                                                 pt:maxlength="50">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -340,7 +358,8 @@
                                                  styleClass="uk-textarea"
                                                  id="azul-4"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[12].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[12].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[12].pregunta}"
+                                                 pt:maxlength="50">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -353,7 +372,8 @@
                                                  styleClass="uk-textarea"
                                                  id="azul-5"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[16].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[16].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[16].pregunta}"
+                                                 pt:maxlength="50">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
