--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -88,7 +88,8 @@
                             <h:inputTextarea id="uno"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                         pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="uno" styleClass=""/>
@@ -97,7 +98,8 @@
                             <h:inputTextarea id="dos"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                         pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="dos" styleClass=""/>
@@ -106,7 +108,8 @@
                             <h:inputTextarea id="tres"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                         pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="tres" styleClass=""/>
@@ -115,7 +118,8 @@
                             <h:inputTextarea id="cuatro"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                             pt:maxlength="150">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="cuatro" styleClass=""/>
@@ -135,7 +139,8 @@
                             <h:inputTextarea id="unom"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                             pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="unom" styleClass=""/>
@@ -144,7 +149,8 @@
                             <h:inputTextarea id="dosm"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                             pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="dosm" styleClass=""/>
@@ -153,7 +159,8 @@
                             <h:inputTextarea id="tresm"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                             pt:maxlength="55">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="tresm" styleClass=""/>
@@ -162,7 +169,8 @@
                             <h:inputTextarea id="cuatrom"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                             pt:maxlength="130">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="cuatrom" styleClass=""/>
