--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -93,7 +93,8 @@
                                                  id="detallea"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                                 pt:maxlength="150">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="detallea" styleClass="mensaje-alerta-9"/>
@@ -108,7 +109,8 @@
                                                  id="detalleb"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                                 pt:maxlength="150">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="detalleb" styleClass="mensaje-alerta-9"/>
@@ -123,7 +125,8 @@
                                                  id="detallec"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                                 pt:maxlength="150">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="detallec" styleClass="mensaje-alerta-9"/>
@@ -138,7 +141,8 @@
                                                  id="detalled"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                                 pt:maxlength="150">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="detalled" styleClass="mensaje-alerta-9"/>
