--- a/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
@@ -107,7 +107,8 @@
                                                  id="unoa"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -118,7 +119,8 @@
                                                  id="unob"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -131,7 +133,8 @@
                                                  id="dosa"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -142,7 +145,8 @@
                                                  id="dosb"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -155,7 +159,8 @@
                                                  id="tresa"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -166,7 +171,8 @@
                                                  id="tresb"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -179,7 +185,8 @@
                                                  id="cuatroa"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
@@ -190,7 +197,8 @@
                                                  id="cuatrob"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                                 pt:placeholder="Some text...">
+                                                 pt:placeholder="Some text..."
+                                                 pt:maxlength="100">
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
