--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <f:metadata>
         <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
@@ -92,7 +93,8 @@
                                         <h:inputTextarea styleClass="uk-textarea"
                                                          id="pregunta-0" rows="3"
                                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                         pt:maxlength="310">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -111,7 +113,8 @@
                                         <h:inputTextarea styleClass="uk-textarea"
                                                          id="pregunta-1" rows="3"
                                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                                         pt:maxlength="310">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -128,7 +131,8 @@
                                         <h:inputTextarea styleClass="uk-textarea"
                                                          id="pregunta-2" rows="3"
                                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                                         pt:maxlength="310">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -147,7 +151,8 @@
                                         <h:inputTextarea styleClass="uk-textarea"
                                                          id="pregunta-3" rows="3"
                                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                         pt:maxlength="310">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
@@ -166,7 +171,8 @@
                                         <h:inputTextarea styleClass="uk-textarea"
                                                          id="pregunta-4" rows="3"
                                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                         pt:maxlength="310">
                                             <f:validateRequired/>
                                         </h:inputTextarea>
                                     </div>
