--- a/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <f:metadata>
         <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
@@ -97,7 +98,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="uno"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -108,7 +110,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="dos"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -119,7 +122,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="tres"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -130,7 +134,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="cuatro"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -141,7 +146,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="cinco"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
@@ -152,7 +158,8 @@
                                 <div class="uk-form-controls">
                                     <h:inputTextarea id="seis"
                                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                                     value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                     pt:maxlength="330">
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
