--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -196,8 +196,10 @@
                     </h:dataTable>
                 </div>
             </h:form>
+            <a id="reporte" style="display: none">boton</a>
         </div>
-        <h:outputScript library="js" name="/profesor/grafica.js"/>
+
+<!--        <h:outputScript library="js" name="/profesor/grafica.js"/>-->
     </ui:define>
 
 </ui:composition>
